namespace Pattern.Gof.AbstractFactory.Meals;

public interface IMainDish
{
    void DisplayInfo();
}